--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ font-size: 18px;
 }
 
 a {
-    color: #20c997;
+    color: #0078A8 !important;
     text-decoration: none;
     background-color: transparent;
 }
@@ -400,6 +400,7 @@ margin-left:-15px;
       border-radius: 25px;
       background-color: #f1f1f1;
       margin: 3px;
+      /*overflow:hidden;*/
     }
 
 .chip_x {
@@ -410,12 +411,18 @@ margin-left:-15px;
 .popup .leaflet-popup-tip,
 .popup .leaflet-popup-content-wrapper {
     background: #f7f7f7;
-    max-height: 220px;
+
     overflow: auto;
 
 }
+.leaflet-popup-content-wrapper{
+
+ height: 220px;
+}
+
 #popup_scroll{
-    max-height: 175px;
+    height: 175px;
+     width: 300px;
 
     overflow: auto;
 }
@@ -423,7 +430,7 @@ margin-left:-15px;
     width:100%;
 }
 .leaflet-popup-content{
-    width: 200px;
+    width: 290px;
 }
 
 .leaflet-container{
@@ -965,3 +972,24 @@ vertical-align: top;
 
 }
 
+.wrap_word {
+   overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+.accordion-button:not(.collapsed) {
+    color: #212529;
+    background-color: #ffffff;
+    box-shadow: inset 0 -1px 0 rgba(0,0,0,.125);
+
+}
+.accordion{
+    border: 1px solid rgba(0,0,0,.125);
+
+}
