--- a/css/style.css
+++ b/css/style.css
@@ -1005,6 +1005,7 @@ sup {
     font-size: 75%;
     text-align:right;
     width:100%;
+    padding-top:5px;
 }
 .badge_color{
      background-color: #F4B33E;
