--- a/css/style.css
+++ b/css/style.css
@@ -414,11 +414,16 @@ margin-left:-15px;
 .leaflet-popup-content-wrapper{
 
  height: 120px;
+  width: 250px;
+}
+.leaflet-popup-content {
+    margin: 5px 5px 5px 5px;
 }
 
+
 #popup_scroll{
-    height: 75px;
-     width: 300px;
+    height: 80px;
+     width: 240px;
 
     overflow: auto;
 }
@@ -426,7 +431,7 @@ margin-left:-15px;
     width:100%;
 }
 .leaflet-popup-content{
-    width: 290px;
+    width: 230px;
 }
 
 .leaflet-container{
@@ -1015,3 +1020,4 @@ sup {
  overflow-y:auto;
 
 }
+
